--- a/pom.xml
+++ b/pom.xml
@@ -1,20 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<!--
-    JBoss, Home of Professional Open Source
-    Copyright 2013, Red Hat, Inc. and/or its affiliates, and individual
-    contributors by the @authors tag. See the copyright.txt in the
-    distribution for a full listing of individual contributors.
 
-    Licensed under the Apache License, Version 2.0 (the "License");
-    you may not use this file except in compliance with the License.
-    You may obtain a copy of the License at
-    http://www.apache.org/licenses/LICENSE-2.0
-    Unless required by applicable law or agreed to in writing, software
-    distributed under the License is distributed on an "AS IS" BASIS,
-    WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
-    See the License for the specific language governing permissions and
-    limitations under the License.
--->
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
     xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
     <modelVersion>4.0.0</modelVersion>
@@ -61,6 +46,8 @@
         <!-- maven-compiler-plugin -->
         <maven.compiler.target>1.6</maven.compiler.target>
         <maven.compiler.source>1.6</maven.compiler.source>
+        
+        <org.richfaces.bom.version>4.1.0.Final</org.richfaces.bom.version>  
     </properties>
 
 
@@ -88,6 +75,15 @@
                 <type>pom</type>
                 <scope>import</scope>
             </dependency>
+            
+             <dependency>  
+                <groupId>org.richfaces</groupId>  
+                <artifactId>richfaces-bom</artifactId>  
+                <version>${org.richfaces.bom.version}</version>  
+                <scope>import</scope>  
+                <type>pom</type>  
+             </dependency>
+               
         </dependencies>
     </dependencyManagement>
 
@@ -98,12 +94,21 @@
 	    <artifactId>servlet-api</artifactId>
 	    <version>2.5</version>
        </dependency>
-       
+            
        <dependency>  
         <groupId>org.primefaces</groupId>  
         <artifactId>primefaces</artifactId>  
         <version>4.0</version>  
-      </dependency>  
+      </dependency>
+      
+       <dependency>  
+        <groupId>org.richfaces.ui</groupId>  
+        <artifactId>richfaces-components-ui</artifactId>  
+       </dependency>  
+       <dependency>  
+        <groupId>org.richfaces.core</groupId>  
+        <artifactId>richfaces-core-impl</artifactId>  
+       </dependency>  
             
 
         <!-- First declare the APIs we depend on and need for compilation. All 
