--- a/.classpath
+++ b/.classpath
@@ -38,6 +38,6 @@
 			<attribute name="org.eclipse.jst.component.dependency" value="/WEB-INF/lib"/>
 		</attributes>
 	</classpathentry>
-	<classpathentry kind="lib" path="C:/Users/DLubin.DEV/Documents/ExportedWARs/EmailEngineCore.jar"/>
+	<classpathentry kind="lib" path="C:/Users/Dan/Documents/ExportedWARs/EmailEngineCore.jar"/>
 	<classpathentry kind="output" path="target/classes"/>
 </classpath>
