--- a/pom.xml
+++ b/pom.xml
@@ -108,7 +108,13 @@
        <dependency>  
         <groupId>org.richfaces.core</groupId>  
         <artifactId>richfaces-core-impl</artifactId>  
-       </dependency>  
+       </dependency> 
+       
+        <dependency>
+	      <groupId>commons-codec</groupId>
+	      <artifactId>commons-codec</artifactId>
+	      <version>1.2</version>
+        </dependency>
             
 
         <!-- First declare the APIs we depend on and need for compilation. All 
