--- a/.classpath
+++ b/.classpath
@@ -27,7 +27,6 @@
 			<attribute name="owner.project.facets" value="jst.web;jst.jsf"/>
 		</attributes>
 	</classpathentry>
-	<classpathentry kind="lib" path="C:/Users/Dan/Documents/ExportedWARs/EmailEngineCore.jar"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType/JavaSE-1.6">
 		<attributes>
 			<attribute name="maven.pomderived" value="true"/>
@@ -39,5 +38,6 @@
 			<attribute name="org.eclipse.jst.component.dependency" value="/WEB-INF/lib"/>
 		</attributes>
 	</classpathentry>
+	<classpathentry kind="lib" path="C:/Users/DLubin.DEV/Documents/ExportedWARs/EmailEngineCore.jar"/>
 	<classpathentry kind="output" path="target/classes"/>
 </classpath>
