--- a/pom.xml
+++ b/pom.xml
@@ -115,6 +115,18 @@
 	      <artifactId>commons-codec</artifactId>
 	      <version>1.2</version>
         </dependency>
+        
+         <dependency>
+            <groupId>org.quartz-scheduler</groupId>
+            <artifactId>quartz</artifactId>
+            <version>2.2.1</version>
+         </dependency>
+         <dependency>
+             <groupId>org.quartz-scheduler</groupId>
+             <artifactId>quartz-jobs</artifactId>
+             <version>2.2.1</version>
+         </dependency>         
+                   
             
 
         <!-- First declare the APIs we depend on and need for compilation. All 
